added pricing and printing of receipts
